--- a/dots/.sharedrc
+++ b/dots/.sharedrc
@@ -13,6 +13,7 @@ fi
 # Android development tools
 export ANDROID_HOME="${HOME}/Android/Sdk"
 if [ -d "${ANDROID_HOME}" ]; then
+    export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
     export PATH=$PATH:$ANDROID_HOME/tools
     export PATH=$PATH:$ANDROID_HOME/platform-tools
     build_tools_path=${ANDROID_HOME}/build-tools
