Split demant specific configuration

--- a/dots/.gitconfig
+++ b/dots/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = danny@hvam.io
-	name = Danny Hvam
+	email = dnhv@demant.com
+	name = Danny Markussen Hvam
 [core]
 	autocrlf = input
 	trustctime = false
