Revert gitconfig name and email change

--- a/dots/.gitconfig
+++ b/dots/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = dnhv@demant.com
-	name = Danny Markussen Hvam
+	email = danny@hvam.io
+	name = Danny Hvam
 [core]
 	autocrlf = input
 	trustctime = false
