--- a/dots/.gitconfig
+++ b/dots/.gitconfig
@@ -6,6 +6,17 @@
 	trustctime = false
 	longpaths = true
 	editor = code --wait
+	excludesfile = ~/.gitignore
+[column]
+	ui = auto
+[branch]
+	sort = -committerdate
+[tag]
+	sort = version:refname
+[push]
+	default = simple
+	autoSetupRemote = true
+	followTags = true
 [color]
 	ui = true
 	branch = true
@@ -16,3 +27,14 @@
 	prune = true
 	pruneTags = true
 	all = true
+[init]
+	defaultBranch = master
+[advice]
+	detachedHead = false
+[alias]
+	hist = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)' --all
+[diff]
+	algorithm = histogram
+	colorMoved = plain
+	mnemonicPrefix = true
+	renames = true
