remove z layer and merge functionality with capslock layer

--- a/dots/.config/keyd/default.conf
+++ b/dots/.config/keyd/default.conf
@@ -4,12 +4,9 @@
 [main]
 
 # Capslock switches to the 'dk' layer
-capslock = layer(dk)
+capslock = layer(caps-layer)
 
-# Maps z to a custom layer, but just 'z' when pressed.
-z = overload(z, z)
-
-[dk]
+[caps-layer]
 # lowercase æøå
 ' = macro(compose a e)
 o = macro(compose o /)
@@ -19,8 +16,6 @@ a = macro(compose a a)
 shift-' = macro(compose A E)
 shift-o = macro(compose O /) # Doesn't work yet, needs to be fixed
 shift-a = macro(compose A A)
-
-[z]
 
 ## Emails
 d = macro(danny@hvam.io)
