Move password macro

--- a/dots/.config/keyd/default.conf
+++ b/dots/.config/keyd/default.conf
@@ -25,7 +25,7 @@ v = C-S-v
 x = A-f4
 
 # Claria
-p = macro(1234567)
+q = macro(1234567)
 1 = macro(test01@hvam.io)
 2 = macro(test02@hvam.io)
 3 = macro(test03@hvam.io)
