Add suspend command

--- a/dots/.config/keyd/default.conf
+++ b/dots/.config/keyd/default.conf
@@ -23,6 +23,7 @@ d = macro(danny@hvam.io)
 ## Simplify complicated shortcut keys
 v = C-S-v
 x = A-f4
+s = command(systemctl suspend)
 
 # Claria
 q = macro(1234567)
